--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+     "lint": "eslint ."
   },
   "keywords": [
     "weather",
@@ -22,6 +23,9 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "nodemon": "^3.1.10"
   },
   "engines": {
