--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "simulate": "node scripts/weather-simulator.js",
     "dev": "nodemon src/index.js",
-     "lint": "eslint ."
+    "format": "prettier --write .",
+    "lint": "eslint ."
   },
   "keywords": [
     "weather",
