--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "01egP",
   "license": "MIT",
   "dependencies": {
+    "express": "^5.1.0",
     "node-fetch": "^2.7.0",
     "ws": "^8.18.3"
   },
