--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "simulate": "node scripts/weather-simulator.js",
     "dev": "nodemon --watch src --ignore data src/index.js",
     "format": "prettier --write .",
-    "lint": "eslint ."
+    "lint": "eslint src scripts utils"
   },
   "keywords": [
     "weather",
@@ -21,6 +21,7 @@
   "author": "01egP",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "node-fetch": "^2.7.0",
     "ws": "^8.18.3"
