--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,11 @@
   "author": "01egP",
   "license": "MIT",
   "dependencies": {
+    "connect-timeout": "^1.9.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.7.0",
     "ws": "^8.18.3"
   },
@@ -30,7 +33,8 @@
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   },
   "engines": {
     "node": ">=20.17.0"
