--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.14",
+    "@types/ws": "^8.18.1",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
