--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
   "proxy": "http://localhost:3000",
   "devDependencies": {
     "@babel/core": "^7.28.0",
+    "@types/jest": "^30.0.0",
     "@types/plotly.js": "^3.0.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
