--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "simulate": "ts-node src/scripts/weather-simulator.ts",
     "format": "prettier --write .",
-    "lint": "eslint src scripts utils"
+    "lint": "eslint src utils"
   },
   "keywords": [
     "weather",
@@ -37,7 +37,9 @@
     "@types/node": "^24.0.14",
     "@types/node-fetch": "^2.6.12",
     "@types/ws": "^8.18.1",
-    "eslint": "^9.30.1",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
+    "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "nodemon": "^3.1.10",
