--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "simulate": "ts-node src/scripts/weather-simulator.ts",
     "format": "prettier --write .",
-    "lint": "eslint src utils"
+    "lint": "eslint src utils",
+    "test": "jest"
   },
   "keywords": [
     "weather",
@@ -33,17 +34,22 @@
   "devDependencies": {
     "@types/connect-timeout": "^1.9.0",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.14",
     "@types/node-fetch": "^2.6.12",
+    "@types/supertest": "^6.0.3",
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
+    "jest": "^30.0.4",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "supertest": "^7.1.3",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
